Support Massive API key aliases for live quotes

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
 # Required for persistent storage (Vercel Postgres)
 DATABASE_URL=
 
-# Optional for price fallback
+# Optional live price providers
+MASSIVE_API_KEY=
+# Optional override (defaults to https://api.massive.com)
+MASSIVE_API_BASE_URL=
 ALPHA_VANTAGE_KEY=
