Add isolated IBKR sync flow with local control panel

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,6 @@ DATABASE_URL=
 MASSIVE_API_KEY=
 # Optional override (defaults to https://api.massive.com)
 MASSIVE_API_BASE_URL=
+
+# Optional IBKR local sync integration
+IBKR_SYNC_TOKEN=
