--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "typecheck": "tsc --noEmit",
-    "test": "node --experimental-strip-types --test lib/scoring.test.mjs",
+    "test": "node --experimental-strip-types --experimental-specifier-resolution=node --test lib/scoring.test.mjs lib/ibkr-transform.test.mjs",
     "ibkr:panel": "node scripts/ibkr-control-panel.mjs"
   },
   "dependencies": {
